# barcode-scanner-app

./: .gitignore  Dockerfile  README.md  config.py  create_user.py  docker-compose.yml  pyproject.toml  requirements.txt  run.py  structure.txt
app/: __init__.py  config.py  decorators.py  models.py  routes.py
app/auth/: __init__.py  decorators.py  utils.py  views.py
app/views/: auth.py  barcode_scanner.py  organization.py  playground.py  product.py  user.py  user_roles.py  user_warehouse.py  warehouse.py
barcode-scanner-frontend/: Dockerfile  package-lock.json  package.json
barcode-scanner-frontend/public/: index.html  manifest.json  static.json  web.config
barcode-scanner-frontend/src/: App.css  App.js  api.js  index.css  index.js
barcode-scanner-frontend/src/components/: DataTab.js  ModalForm.js  PrivateRoute.js  serviceWorkerRegistration.js
barcode-scanner-frontend/src/components/Auth/: AuthContext.js  IpManagement.js  Login.css  Login.js  Logout.js
barcode-scanner-frontend/src/components/Common/: Footer.js  Header.js  Navbar.js  Sidebar.js
barcode-scanner-frontend/src/components/Dashboard/: ScanButton.js
barcode-scanner-frontend/src/contexts/: SubNavContext.js
commands/: __init__.py  create_user.py  seed_db.py
migrations/versions/: 03e8f6665ddb_replace_location_with_code_in_warehouses.py  1940de7a4bf4_update_routes.py  24562c11eb8a_user_warehouses.py  76698223c80f_initial_migration.py  98579fc715a4_add_default_uuid_to_userwarehouse_id.py  a89fd50555cc_add_org_username_and_org_password_to_.py  c36c09c2027b_initial_migration.py
(+28 files in other folders)
